ingress-config/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    haproxy.org/ssl-passthrough: "true"
    cert-manager.io/issuer: letsencrypt-staging-global
spec:
  ingressClassName: haproxy
  rules:
  - host: argocd.assouman.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - argocd.assouman.fr
    secretName: argocd-cert-secret
