ingress-config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: dev
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/issuer: letsencrypt-staging-dev
spec:
  ingressClassName: haproxy
  rules:
  - host: "watch.assouman.fr"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-my-service-nginx
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - watch.assouman.fr
    secretName: dev-cert-secret
